--- a/less/home-page.less
+++ b/less/home-page.less
@@ -6,20 +6,27 @@
 }
 .divContainer{
     display: flex;
-    flex-direction: column;
+    flex-direction: row-reverse;
+	justify-content:center;
     align-items: center;
     /*background-color: orange;*/
-    .image{
-        
-        
-    }
+   
+	.section-content{
+		width:40%;
+		padding: 0 5% 0 0;
+	}
+	
     .words{
 		
-		width:50%;
-		
         h1{
-            text-align: center;
+            text-align: left;
+			margin: 0 0 5% 0;
         }
+		
+		p {
+			text-align:left;
+			margin:0 0 5% 0;
+		}
         
     }
 	.btn{
@@ -30,7 +37,7 @@
             background-color: #2196F3;
             margin: 0 10px 20px;
             cursor: pointer;
-            width: 200px;
+            width: 328px;
             height: 35px;
             font-size: 2rem;
             border-radius: 10px;
@@ -39,7 +46,6 @@
 
 
 .phone-img{    
-    width: 500px;
-    height: 350px;
+	width:30%;
 }
 
